@@ -44,9 +44,15 @@
       $list= array();
 
       foreach ($this->getArguments() as $arg) {
-        if (FALSE !== ($p= strpos($arg, '='))) {
+        if (FALSE !== ($p= strpos($arg, ':'))) {
           $urn= substr($arg, $p+ 1);
           $arg= substr($arg, 0, $p);
+        } else if (FALSE !== ($p= strpos($arg, '=')) && !file_exists($arg)) {   // BC
+          $this->err->writeLine('Using "=" as separator between filename and archive name is deprecated, please use ":"');
+          $urn= substr($arg, $p+ 1);
+          $arg= substr($arg, 0, $p);
+        } else {
+          $urn= NULL;
         }
       
         if (is_file($arg)) {
