@@ -8,12 +8,19 @@ SVN version: ?????
 
 Heads up!
 ~~~~~~~~~
+- Changed separator character for alternative file names in xar command
+  from "=" to ":", which is not an allowable character neither on Un*x
+  nor on Windows operating systems.
+  (friebe)
 - Changed util.log.ConsoleAppender to use util.cmd.Console class instead
   of directly writing to STDERR
   (friebe)
 
 Bugfixes
 ~~~~~~~~
+- Fixed xar command when files are passed with alternative names creating
+  archives with all files named after the alternative name.
+  (friebe)
 - Fixed lang.Process::close() not to raise warnings when called twice
   (friebe)
 - Fixed lang.Process::close() to raise a specialized exception if the 
